--- a/styles/notion.css
+++ b/styles/notion.css
@@ -89,3 +89,35 @@ pre[class*='language-'] {
   @apply mb-2;
   @apply text-left;
 }
+@media (prefers-color-scheme:dark) {
+  :root {
+    --fg-color-0: #6b728080;
+    --notion-red: #DF5452;
+    --notion-pink: #D15796;
+    --notion-blue: #5E87C9;
+    --notion-purple: #9D68D3;
+    --notion-teal: #529E72;
+    --notion-yellow: #CA9849;
+    --notion-orange: #C77D48;
+    --notion-brown: #BA856F;
+    --notion-gray: #9B9B9B;
+    --notion-red_background: #522E2A;
+    --notion-pink_background: #4E2C3C;
+    --notion-blue_background: #143A4E;
+    --notion-purple_background: #3C2D49;
+    --notion-teal_background: #243D30;
+    --notion-yellow_background: #564328;
+    --notion-orange_background: #5C3B23;
+    --notion-brown_background: #4A3228;
+    --notion-gray_background: #2F2F2F;
+    --notion-red_background_co: #362422;
+    --notion-pink_background_co: #302228;
+    --notion-blue_background_co: #1D282E;
+    --notion-purple_background_co: #2B2431;
+    --notion-teal_background_co: #222B26;
+    --notion-yellow_background_co: #392E1E;
+    --notion-orange_background_co: #38281E;
+    --notion-brown_background_co: #2F2723;
+    --notion-gray_background_co: #191919;
+  }
+}
